# VraagSlaaf

./: .gitignore  deploy_instructions.md  lijst.todo  pyproject.toml
Vraagslaaf/: cal.py  cal2.py  casino.py  comms.py  database.json  lock.py  main.py  music.py  opl.py  players.json  radio.py  server.py  study.py  studyroom.py  ufora.py  verify.py  vragen.txt  weer.py  wolfram.py
Vraagslaaf/cogs/: VraagslaafCog.py  testcog.py
Vraagslaaf/logs/: log20210216-163225.txt  log20210216-163345.txt  log20210219-144707.txt
Vraagslaaf/static/css/: styles.less
Vraagslaaf/static/js/: app.js  main.js
Vraagslaaf/static/js/app/: reelModule.js
Vraagslaaf/templates/: index.html  theo.html
docs/: Intro_voor_de_Vraagslaaf.md  deploying.md
